hw6_lab10/tests/errors/sem_too_many_args.kt
// EXPECT: semantic error — too many arguments
fun greet(name: String) {
    println(name)
}
fun main() {
    greet("alice", "extra")
}
